# watersim

./: .gitignore  BENCHMARK_RESULTS.md  BUILD.md  Cargo.toml  FINAL_BENCHMARK_REPORT.md  OPTIMIZATIONS.md  README.md
.github/workflows/: ci.yml
benches/: full_benchmark.rs  nbody.rs  physics_bench.rs
docs/: literature.md  pbf.md  solvers.md
docs/archive/: README.md
docs/benchmarks/: 00-baseline.md  01-build-config.md  02-csr-grid.md  03-barnes-hut-arena.md  04-small-steps.md  05-rayon-parallel.md  06-csr-verlet-lists.md  07-spatial-reorder.md  08-bare-metal-kernels.md  09-bh-hot-cold-split.md  10-packed-simd-jacobi.md  11-bh-packed-leaves.md  12-baseline-2026-07-13.md  13-bh-theta.md  14-mts-farfield.md  15-solver-relaxation.md  16-second-pass-report.md  17-smaller-particles.md  18-engine-crossover.md  19-grid-retune.md  20-coincident-tiebreak.md  21-dt2-integrator.md  22-small-steps.md  23-cluster-gather.md  24-cluster-force-gather-rejected.md  25-cutoff-model.md  26-unified-model-tuning.md  README.md
resources/: blur.wgsl  physics_compute.wgsl
src/: constants.rs  lib.rs  main.rs  physics.rs  simd_physics.rs
src/physics/: dfsph.rs  granular.rs  mlsmpm.rs  mod.rs  pbf.rs  sph.rs
