[package]
name = "lolballs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lolballs"
path = "src/lib.rs"

[[bin]]
name = "lolballs"
path = "src/main.rs"
required-features = ["graphics"]

[features]
default = ["graphics"]
graphics = ["dep:ggez"]

[dependencies]
glam = "0.24.1"
ggez = { version = "0.9.0", optional = true }

[[bench]]
name = "nbody"
harness = false
