[package]
name = "lolballs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lolballs"
path = "src/lib.rs"

[[bin]]
name = "lolballs"
path = "src/main.rs"
required-features = ["graphics"]

# Headless comparison renderer (writes GIF/PNG). Off the default feature set so
# neither the graphics build nor the headless CI build compiles it.
[[bin]]
name = "render"
path = "src/bin/render.rs"
required-features = ["render"]

[features]
default = ["graphics"]
graphics = ["dep:ggez"]
render = []
# Adds animated-WebP output to the render tool (pulls libwebp via the `webp`
# crate). Off by default so neither CI build compiles it; enable with
# `--features media` for the `--webp` clip generator.
media = ["render", "dep:webp"]

[dependencies]
glam = "0.24.1"
rayon = "1.10"
ggez = { version = "0.9.0", optional = true }
webp = { version = "0.3", optional = true }

[[bench]]
name = "nbody"
harness = false

[profile.release]
lto = "thin"
